Try using env var GH_RELEASE_TOKEN for api_key
GH_RELEASE_TOKEN is set in travis repo settings

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,8 +21,7 @@ jobs:
       deploy:
         skip_cleanup: true
         provider: releases
-        api_key:
-          secure: INSERT_API_KEY_HERE
+        api_key: $GH_RELEASE_TOKEN
         file:
           - tlself_macos.zip
           - tlself_linux.zip
